# NexusCore

./: .dockerignore  .env.example  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  devdoc.md  docker-compose.yml  flow.md  pyproject.toml
src/agents/: db_agent.py  engine.py  specialists.py  supervisor.py  tool_registry.py
src/api/: main.py
src/core/: config.py  mcp.py  worker.py
src/mcp/: postgres_server.py
src/models/: state.py
src/workflows/: graph.py  orchestrator.py
tests/: test_api.py  test_config.py  test_imports.py  test_mcp_pool.py  test_models.py  test_routing.py  test_tool_registry.py
