[project]
name = "nexuscore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.70",
    "boto3-stubs~=1.42.70",
    "fastapi>=0.135.1",
    "langchain-core>=1.2.19",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "mcp[cli]>=1.26.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "temporalio>=1.23.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
